fix language switcher's visibility in mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ h2 {
     font-weight: 200;
     color: #FFFFFF;
     font-size: clamp(1rem, 2vw, 1.2rem);
-    margin: 0 20px;
+    margin: -30px 20px;
     position: relative;
     display: inline-block; 
     transition: all 0.5s ease-in-out;
@@ -189,12 +189,11 @@ h2 {
     cursor: pointer;
     margin: 0 0 0 30px;
     transition: opacity 0.3s ease; 
-    margin: 0 0 0 30px;
 }
 
 @media screen and (max-width: 1024px) { 
     #languageSwitcher {
-        margin: 0 30px;
+        margin: 20px 30px;
     }
 }
 
